feat: game list improvements

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -49,6 +49,12 @@ $breakPoint_md: 720px; // TODO
     }
 }
 
+.GameList {
+    .list-extra-info {
+        display: grid;
+    }
+}
+
 .MuiPaper-root.StatusInfo {
     padding: $standardMargin;
 }
